k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod
  labels:
    app: flask-app
spec:
  containers:
    - name: flask-container
      image: flask-k8s-app:v1
      imagePullPolicy: Never       # Use local image from Minikube
      ports:
        - containerPort: 5000
